fix header alignment

--- a/index.css
+++ b/index.css
@@ -84,9 +84,6 @@ body {
   padding-left: 33vw;
 }
 
-#singleline{
-  text-align: center;
-}
 
 #display h1 {
   font-size: 50px;
